# Model-Deploy

./: .gitignore  CMakeLists.txt  PROJECT_DOCUMENTATION.md  README.md
include/: stb_image.h  trt_segmentation.h  trt_segmentation_impl.h
src/: dll_interface.cpp  main.cpp  trt_segmentation.cpp
